Compiler/Grammar/Leaf/Compilation/Grammar/LeafParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/max/RiderProjects/Leaf/Compiler/Grammar/Leaf.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Leaf.Compilation.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class LeafParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, WS=21, Escape=22, Comment=23, MultiLineComment=24, 
		Def=25, Ref=26, Var=27, Let=28, Pub=29, Free=30, Static=31, TypeOf=32, 
		SizeOf=33, Return=34, Struct=35, Operator=36, Allocator=37, StaticAccessor=38, 
		DynamicAccessor=39, In=40, Out=41, Add=42, Sub=43, Mul=44, Div=45, Mod=46, 
		As=47, Eq=48, Neq=49, If=50, For=51, Else=52, While=53, Range=54, Group=55, 
		True=56, False=57, Integer=58, FloatingPoint=59, Char=60, String=61, CString=62, 
		Id=63;
	public const int
		RULE_namespace = 0, RULE_operator_id = 1, RULE_type = 2, RULE_type_member = 3, 
		RULE_struct = 4, RULE_attribute = 5, RULE_attribute_add = 6, RULE_allocator = 7, 
		RULE_def_type = 8, RULE_def_func = 9, RULE_def_operator = 10, RULE_def = 11, 
		RULE_parameter_def = 12, RULE_function_decl = 13, RULE_function_impl = 14, 
		RULE_function_call = 15, RULE_function_scope = 16, RULE_integer = 17, 
		RULE_floating_point = 18, RULE_value = 19, RULE_initialization_list = 20, 
		RULE_scope = 21, RULE_conditional_scope = 22, RULE_var_def_t = 23, RULE_var_def_v = 24, 
		RULE_var_ass = 25, RULE_var_def = 26, RULE_if = 27, RULE_while = 28, RULE_for = 29, 
		RULE_return = 30, RULE_free = 31, RULE_statement = 32, RULE_generic_def_list = 33, 
		RULE_generic_impl_list = 34, RULE_ns_import = 35, RULE_entry_point = 36;
	public static readonly string[] ruleNames = {
		"namespace", "operator_id", "type", "type_member", "struct", "attribute", 
		"attribute_add", "allocator", "def_type", "def_func", "def_operator", 
		"def", "parameter_def", "function_decl", "function_impl", "function_call", 
		"function_scope", "integer", "floating_point", "value", "initialization_list", 
		"scope", "conditional_scope", "var_def_t", "var_def_v", "var_ass", "var_def", 
		"if", "while", "for", "return", "free", "statement", "generic_def_list", 
		"generic_impl_list", "ns_import", "entry_point"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "','", "'->'", "':'", "'{'", "';'", "'}'", "'attribute'", 
		"'@'", "'mut'", "'=>'", "'&'", "'='", "'['", "']'", "'?'", "'<'", "'>'", 
		"'import'", null, null, null, null, "'def'", "'ref'", "'var'", "'let'", 
		"'pub'", "'free'", "'static'", "'typeof'", "'sizeof'", "'return'", "'struct'", 
		"'operator'", "'allocator'", "'::'", "'.'", "'in'", "'out'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'as'", "'=='", "'!='", "'if'", "'for'", "'else'", 
		"'while'", "'..'", "'...'", "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "WS", "Escape", 
		"Comment", "MultiLineComment", "Def", "Ref", "Var", "Let", "Pub", "Free", 
		"Static", "TypeOf", "SizeOf", "Return", "Struct", "Operator", "Allocator", 
		"StaticAccessor", "DynamicAccessor", "In", "Out", "Add", "Sub", "Mul", 
		"Div", "Mod", "As", "Eq", "Neq", "If", "For", "Else", "While", "Range", 
		"Group", "True", "False", "Integer", "FloatingPoint", "Char", "String", 
		"CString", "Id"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Leaf.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LeafParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LeafParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LeafParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class NamespaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Id() { return GetTokens(LeafParser.Id); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id(int i) {
			return GetToken(LeafParser.Id, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DynamicAccessor() { return GetToken(LeafParser.DynamicAccessor, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 0, RULE_namespace);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(Id);
			State = 75;
			Match(DynamicAccessor);
			State = 76;
			Match(Id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Operator_idContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id() { return GetToken(LeafParser.Id, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Add() { return GetToken(LeafParser.Add, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Sub() { return GetToken(LeafParser.Sub, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Mul() { return GetToken(LeafParser.Mul, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Div() { return GetToken(LeafParser.Div, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Mod() { return GetToken(LeafParser.Mod, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode As() { return GetToken(LeafParser.As, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DynamicAccessor() { return GetToken(LeafParser.DynamicAccessor, 0); }
		public Operator_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operator_id; } }
	}

	[RuleVersion(0)]
	public Operator_idContext operator_id() {
		Operator_idContext _localctx = new Operator_idContext(Context, State);
		EnterRule(_localctx, 2, RULE_operator_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DynamicAccessor) | (1L << Add) | (1L << Sub) | (1L << Mul) | (1L << Div) | (1L << Mod) | (1L << As) | (1L << Id))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public IToken ns;
		public IToken name;
		public TypeContext nested;
		public TypeContext tuple;
		public TypeContext ret;
		public IToken ptr;
		public IToken property;
		public IToken funcCall;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Id() { return GetTokens(LeafParser.Id); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id(int i) {
			return GetToken(LeafParser.Id, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DynamicAccessor() { return GetToken(LeafParser.DynamicAccessor, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Generic_impl_listContext generic_impl_list() {
			return GetRuleContext<Generic_impl_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ref() { return GetToken(LeafParser.Ref, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AllocatorContext allocator() {
			return GetRuleContext<AllocatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext attribute() {
			return GetRuleContext<AttributeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TypeOf() { return GetToken(LeafParser.TypeOf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Mul() { return GetToken(LeafParser.Mul, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StaticAccessor() { return GetToken(LeafParser.StaticAccessor, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	}

	[RuleVersion(0)]
	public TypeContext type() {
		return type(0);
	}

	private TypeContext type(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		TypeContext _localctx = new TypeContext(Context, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_type, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 83;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 81;
					_localctx.ns = Match(Id);
					State = 82;
					Match(DynamicAccessor);
					}
					break;
				}
				State = 85;
				_localctx.name = Match(Id);
				State = 87;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 86;
					generic_impl_list();
					}
					break;
				}
				}
				break;
			case 2:
				{
				State = 89;
				Match(Ref);
				State = 90;
				type(10);
				}
				break;
			case 3:
				{
				State = 91;
				Match(T__0);
				State = 92;
				_localctx.nested = type(0);
				State = 93;
				Match(T__1);
				}
				break;
			case 4:
				{
				State = 95;
				Match(T__0);
				State = 96;
				_localctx.tuple = type(0);
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 97;
					Match(T__2);
					State = 98;
					type(0);
					}
					}
					State = 103;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 104;
				Match(T__1);
				}
				break;
			case 5:
				{
				State = 106;
				Match(T__0);
				{
				State = 107;
				type(0);
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 108;
					Match(T__2);
					State = 109;
					type(0);
					}
					}
					State = 114;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				State = 115;
				Match(T__1);
				State = 116;
				Match(T__3);
				State = 117;
				_localctx.ret = type(7);
				}
				break;
			case 6:
				{
				State = 119;
				@struct();
				}
				break;
			case 7:
				{
				State = 120;
				allocator();
				}
				break;
			case 8:
				{
				State = 121;
				attribute();
				}
				break;
			case 9:
				{
				State = 122;
				Match(TypeOf);
				State = 123;
				Match(T__0);
				State = 124;
				value(0);
				State = 125;
				Match(T__1);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 154;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 152;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
					case 1:
						{
						_localctx = new TypeContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 129;
						if (!(Precpred(Context, 11))) throw new FailedPredicateException(this, "Precpred(Context, 11)");
						State = 130;
						_localctx.ptr = Match(Mul);
						}
						break;
					case 2:
						{
						_localctx = new TypeContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 131;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 132;
						Match(StaticAccessor);
						State = 133;
						_localctx.property = Match(Id);
						}
						break;
					case 3:
						{
						_localctx = new TypeContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 134;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 135;
						Match(StaticAccessor);
						State = 136;
						_localctx.funcCall = Match(Id);
						State = 138;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
						if (_la==T__17) {
							{
							State = 137;
							generic_impl_list();
							}
						}

						State = 140;
						Match(T__0);
						State = 149;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__8) | (1L << T__12) | (1L << Ref) | (1L << TypeOf) | (1L << SizeOf) | (1L << Struct) | (1L << Allocator) | (1L << Mul) | (1L << True) | (1L << False) | (1L << Integer) | (1L << FloatingPoint) | (1L << Char) | (1L << String) | (1L << CString) | (1L << Id))) != 0)) {
							{
							State = 141;
							value(0);
							State = 146;
							ErrorHandler.Sync(this);
							_la = TokenStream.LA(1);
							while (_la==T__2) {
								{
								{
								State = 142;
								Match(T__2);
								State = 143;
								value(0);
								}
								}
								State = 148;
								ErrorHandler.Sync(this);
								_la = TokenStream.LA(1);
							}
							}
						}

						State = 151;
						Match(T__1);
						}
						break;
					}
					} 
				}
				State = 156;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Type_memberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id() { return GetToken(LeafParser.Id, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Pub() { return GetToken(LeafParser.Pub, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Static() { return GetToken(LeafParser.Static, 0); }
		public Type_memberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_member; } }
	}

	[RuleVersion(0)]
	public Type_memberContext type_member() {
		Type_memberContext _localctx = new Type_memberContext(Context, State);
		EnterRule(_localctx, 6, RULE_type_member);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Pub) {
				{
				State = 157;
				Match(Pub);
				}
			}

			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Static) {
				{
				State = 160;
				Match(Static);
				}
			}

			State = 163;
			Match(Id);
			State = 164;
			Match(T__4);
			State = 165;
			type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Struct() { return GetToken(LeafParser.Struct, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_memberContext[] type_member() {
			return GetRuleContexts<Type_memberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_memberContext type_member(int i) {
			return GetRuleContext<Type_memberContext>(i);
		}
		public StructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct; } }
	}

	[RuleVersion(0)]
	public StructContext @struct() {
		StructContext _localctx = new StructContext(Context, State);
		EnterRule(_localctx, 8, RULE_struct);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			Match(Struct);
			State = 168;
			Match(T__5);
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Pub) | (1L << Static) | (1L << Id))) != 0)) {
				{
				{
				State = 169;
				type_member();
				State = 170;
				Match(T__6);
				}
				}
				State = 176;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 177;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttributeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_memberContext[] type_member() {
			return GetRuleContexts<Type_memberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_memberContext type_member(int i) {
			return GetRuleContext<Type_memberContext>(i);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute; } }
	}

	[RuleVersion(0)]
	public AttributeContext attribute() {
		AttributeContext _localctx = new AttributeContext(Context, State);
		EnterRule(_localctx, 10, RULE_attribute);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 179;
			Match(T__8);
			State = 180;
			Match(T__5);
			State = 186;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Pub) | (1L << Static) | (1L << Id))) != 0)) {
				{
				{
				State = 181;
				type_member();
				State = 182;
				Match(T__6);
				}
				}
				State = 188;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 189;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attribute_addContext : ParserRuleContext {
		public IToken ns;
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Id() { return GetTokens(LeafParser.Id); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id(int i) {
			return GetToken(LeafParser.Id, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DynamicAccessor() { return GetToken(LeafParser.DynamicAccessor, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Generic_impl_listContext generic_impl_list() {
			return GetRuleContext<Generic_impl_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public Attribute_addContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute_add; } }
	}

	[RuleVersion(0)]
	public Attribute_addContext attribute_add() {
		Attribute_addContext _localctx = new Attribute_addContext(Context, State);
		EnterRule(_localctx, 12, RULE_attribute_add);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 191;
			Match(T__9);
			State = 194;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				{
				State = 192;
				_localctx.ns = Match(Id);
				State = 193;
				Match(DynamicAccessor);
				}
				break;
			}
			State = 196;
			_localctx.name = Match(Id);
			State = 198;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__17) {
				{
				State = 197;
				generic_impl_list();
				}
			}

			State = 211;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 200;
				Match(T__0);
				State = 201;
				value(0);
				State = 206;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 202;
					Match(T__2);
					State = 203;
					value(0);
					}
					}
					State = 208;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 209;
				Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AllocatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Allocator() { return GetToken(LeafParser.Allocator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_memberContext[] type_member() {
			return GetRuleContexts<Type_memberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_memberContext type_member(int i) {
			return GetRuleContext<Type_memberContext>(i);
		}
		public AllocatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_allocator; } }
	}

	[RuleVersion(0)]
	public AllocatorContext allocator() {
		AllocatorContext _localctx = new AllocatorContext(Context, State);
		EnterRule(_localctx, 14, RULE_allocator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 213;
			Match(Allocator);
			State = 214;
			Match(T__5);
			State = 220;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Pub) | (1L << Static) | (1L << Id))) != 0)) {
				{
				{
				State = 215;
				type_member();
				State = 216;
				Match(T__6);
				}
				}
				State = 222;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 223;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Def_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Def() { return GetToken(LeafParser.Def, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id() { return GetToken(LeafParser.Id, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Generic_def_listContext generic_def_list() {
			return GetRuleContext<Generic_def_listContext>(0);
		}
		public Def_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_def_type; } }
	}

	[RuleVersion(0)]
	public Def_typeContext def_type() {
		Def_typeContext _localctx = new Def_typeContext(Context, State);
		EnterRule(_localctx, 16, RULE_def_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 225;
			Match(Def);
			State = 226;
			Match(Id);
			State = 228;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__17) {
				{
				State = 227;
				generic_def_list();
				}
			}

			State = 230;
			Match(T__4);
			{
			State = 231;
			@struct();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
